--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <h2 class="s-intro__about-title" >Hello! I’m Lisa Dang (she/her).</h2>
 
                     <p style="text-align: center">
-                    I am a <a style="color:white"> Banting Postdoctoral Fellow at Université de Montréal</a>. I use a variety of space-based telescopes to characterize short-period exoplanets and their atmospheres at the <a href="http://www.exoplanetes.umontreal.ca/?lang=en>">Institute for Research on Exoplanets</a>. I am particularly interested in revealing the multi-dimensional nature of exoplanets atmosphere from phase-resolved observations. I also occasionally dabble in gravitational microlensing to improve observing surveys to study wide-orbit exoplanets! I can be reached at <b><a style="color:white" href="mailto:lisa.dang@physics.mcgill.ca">lisa.dang@physics.mcgill.ca</a></b>
+                    I am a <a style="color:white"> Banting Postdoctoral Fellow at Université de Montréal</a>. I use a variety of space-based telescopes to characterize short-period exoplanets and their atmospheres at the <a href="http://www.exoplanetes.umontreal.ca/?lang=en>">Institute for Research on Exoplanets</a>. I am particularly interested in revealing the multi-dimensional nature of exoplanets atmosphere from phase-resolved observations. I also occasionally dabble in gravitational microlensing to improve observing surveys to study wide-orbit exoplanets! I can be reached at <b><a style="color:white" href="mailto:kha.han.lisa.dang@umontreal.ca">kha.han.lisa.dang@umontreal.ca</a></b>
 
                     <div class="btn-wrap"><a href="cv.pdf" target = "_blank" class="btn btn--primary">Complete CV here</a></div>
                     </p>
